WebDisplay/deploy/manifest-internal.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: display-internal
  namespace: home-monitor
  labels:
    app: display-internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: display-internal
  template:
    metadata:
      labels:
        app: display-internal
    spec:
      containers:
      - name: display-internal
        image: ckaczor/home-monitor-web-display:#BUILD_BUILDNUMBER#
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
        securityContext:
          privileged: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: kubernetes
      schedulerName: default-scheduler
---
kind: Service
apiVersion: v1
metadata:
  name: display-internal
spec:
  ports:
  - name: client
    port: 9001
    targetPort: 80
  selector:
    app: display-internal
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: display-internal
  namespace: home-monitor
spec:
  entryPoints:
  - display
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    priority: 101
    services:
    - kind: Service
      name: display-internal
      namespace: home-monitor
      port: 9001
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: display-internal
  namespace: home-monitor
spec:
  stripPrefix:
    prefixes:
    - /
